--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,13 +11,17 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
+
       - name: Generate Snake Animation
         uses: Platane/snk@v2
         with:
           github_user_name: ${{ github.repository_owner }}
-          output: dist/snake.svg
-      - name: Upload Snake
-        uses: actions/upload-artifact@v3
-        with:
-          name: snake
-          path: dist/snake.svg
+          output: dist/github-contribution-grid-snake.svg
+
+      - name: Commit and Push Snake Animation
+        run: |
+          git config --local user.name "GitHub Actions"
+          git config --local user.email "actions@github.com"
+          git add dist/github-contribution-grid-snake.svg
+          git commit -m "Update GitHub contribution snake animation" || echo "No changes to commit"
+          git push
