--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,17 +11,15 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
       - name: Generate Snake Animation
         uses: Platane/snk@v2
         with:
           github_user_name: ${{ github.repository_owner }}
           output: dist/github-contribution-grid-snake.svg
-
-      - name: Commit and Push Snake Animation
-        run: |
-          git config --local user.name "GitHub Actions"
-          git config --local user.email "actions@github.com"
-          git add dist/github-contribution-grid-snake.svg
-          git commit -m "Update GitHub contribution snake animation" || echo "No changes to commit"
-          git push
+      - name: Commit and Push Snake Animation to Output Branch
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: output
+          commit_message: "Update Snake Animation"
