--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,12 +2,13 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs at midnight UTC every day
-  workflow_dispatch: # Allows manual triggering of the workflow
+    - cron: "0 0 * * *" # Runs every day at midnight
+  workflow_dispatch: # Allows manual workflow run
 
 jobs:
   generate:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -15,10 +16,10 @@ jobs:
       - name: Generate Snake Animation
         uses: Platane/snk@v2
         with:
-          github_user_name: mdshakil-hossain
+          github_user_name: MdShakil-Hossain # Replace with your GitHub username
           outputs: dist/snake.svg
 
-      - name: Push Snake Animation to output branch
+      - name: Push Snake Animation to the output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
