--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,28 +2,24 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Runs every day at midnight UTC
-  workflow_dispatch: # Allows manual workflow run
+    - cron: "0 */12 * * *"  # Runs every 12 hours
+  workflow_dispatch:  # Allows manual runs
 
 jobs:
   generate:
     runs-on: ubuntu-latest
-
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # Step 2: Generate Snake Animation
-      - name: Generate Snake Animation
-        uses: lowlighter/snk@v3 # Use an alternative fork of Platane/snk
+      - name: Generate snake animation
+        uses: Platane/snk@v3
         with:
-          github_user_name: MdShakil-Hossain # Replace with your GitHub username
-          outputs: dist/snake.svg
-
-      # Step 3: Push the Snake Animation to the output branch
-      - name: Push Snake Animation to the output branch
-        uses: crazy-max/ghaction-github-pages@v3
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Push to output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
